# SlotMachineGame

./: .gitignore  CMakeLists.txt  README.md
assets/config/: game_config.json  paylines_config.json  paytable_config.json  reels_config.json
docs/: CMakeLists.txt
include/config/: config_manager.h  config_models.h
include/core/: engine.h  payout.h  rng.h
include/ui/: button.h  game_window.h  reel_view.h
src/: main.cpp
src/core/: engine.cpp  payout.cpp  rng.cpp
src/ui/: button.cpp  game_window.cpp  reel_view.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
